--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap');
 
 body{
-    font-family: 'Open Sans Condensed'
+    font-family: 'Open Sans Condensed';
+    padding:20px 60px;
 }
